--- a/styles.css
+++ b/styles.css
@@ -13,452 +13,446 @@ body {
   font-size: 16px;
 }
 
-/* Header Styles */
-header {
-  width: 100%;
-  text-align: center;
-  padding: 10px;
-  margin-bottom: 3em;
-  background-color: #ffffff;
-  opacity: 1;
-  border-bottom-right-radius: 1em;
 
-}
 
-img {
-  max-width: 100%;
-}
+:root {
+  --primary-color: black;
+  --secondary-color: rgb(249, 249, 249);
+  --background-color: white;
+  --icon--color1: red;
+  --icon--color2: blue;
+  --icon--color3: black;
+  --hoverbackground--color1: #14213d;
+  --hover--color: #fca311;
+  --hover--color2: #5b6271;
+
+
+  /* Header Styles */
+  header {
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 3em;
+    background-color: var(--background-color);
+    opacity: 1;
+    border-bottom-right-radius: 1em;
 
-header img {
-  width: 10em;
-  height: 10em;
-  border-radius: 5em;
-  margin-bottom: 1em;
-  margin-top: 3em;
-  border: 4px solid #f0f0f0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-header nav {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  display: flex;
-  justify-content: right;
-  padding: 0rem;
-  background-color: rgb(249, 249, 249);
-}
-
-
-
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-header nav ul li {
-  margin: 0 1em;
-}
-
-header nav a {
-  text-decoration: none;
-  font-size: 10px;
-  color: #333;
-}
-
-
-header nav a:hover {
-  background-color: #5b6271;
-  transition: all 0.3s ease;
-  border-radius: 2px;
-  padding: 3px;
-  color: #ffff;
-}
-
-header nav a:active {
-  transform: scale(0.98);
-}
-
-/* Icon styling */
-.fa-brands.fa-linkedin.fa-1xl {
-  color: blue;
-  margin: 7px;
-
-}
-
-.fa-brands.fa-youtube.fa-1xl {
-  color: red;
-  margin: 7px;
-}
-
-.fa-brands.fa-github.fa-1xl {
-  color: black;
-  margin: 7px;
-}
-
-.icons {
-  display: flex;
-
-
-}
-
-/* Aboutme Section */
-.section-about {
-  display: flex;
-  background-color: black;
-  padding: 0em;
-}
-
-
-
-/* AboutMe */
-.aboutMe {
-  width: 50%;
-  margin:  auto;
-  margin-bottom: 5em;
-  margin-top: 3em;
-  max-width: 765px;
-  padding: 5px;
-  text-align: justify;
-  border-radius: 1rem;
-  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
-}
-
-
-/* Horrizontal Rule */
-.rule {
-  width: 100%;
-  height: 1px;
-  margin-bottom: 3em;
-}
-
-/* Top Tittle button */
-.title button {
-  background-color: #fca311;
-  color: #fff;
-  padding: 10px 20px;
-  margin-bottom: 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-
-.title button:hover {
-  background-color: #14213d;
-  transform: scale(1.05);
-  color: #fca311;
-}
-
-.title button:active {
-  transform: scale(0.98);
-}
-
-
-p {
-  padding: 5px;
-}
-
-
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-/* Title section */
-.section-title {
-  font-size: 1rem;
-  margin-bottom: 1em;
-}
-
-.section-title {
-  font-size: 2.5em;
-  margin-bottom: 40px;
-  color: #faf6f6;
-}
-
-
-@keyframes mymove {
-  /* 0% { */
-}
-
-h1 {
-  font-size: 2rem;
-}
-
-h2 {
-  animation-delay: 60s;
-  animation: 3s ease-in-out 1s reverse infinite both running mymove;
-  color: orange;
-  animation-duration: 4s;
-}
-
-span {
-  color: black;
-}
-
-
-/* Project Image Styling */
-.Image img {
-  width: 20%;
-}
-
-.row .Image {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 10px;
-
-}
-
-/* Text Styling */
-.intro-text {
-  font-size: 1rem;
-  color: #fff;
-  margin-bottom: 2em;
-}
-
-.project-text,
-.blog-text {
-  font-size: 2rem;
-  margin-top: 4em;
-  text-align: center;
-  color: #000;
-  margin-bottom: 1em;
-}
-
-.contact__form__text {
-  text-align: center;
-}
-
-/* SkillSection Styling */
-.skill-statement {
-  padding: 2em;
-  margin-bottom: 1em;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.skill-statement .skills-text {
-  font-size: 2rem;
-  color: #fff;
-  margin-bottom: 1em;
-}
-
-.skill-statement p {
-  font-size: 1.1rem;
-  color: #f6f6f6;
-}
-
-.skill-section{
-  background-color: #000;
-  padding: 4em 2em;
-}
-
-
-/* The highlights */
-
-.highlights {
-  display: flex;
-  justify-content: space-around;
-  gap: 2rem;
-}
-
-.highlight {
-  background-color: #fff;
-  padding: 2em;
-  flex: 1;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-.highlight h3 {
-  font-size: 1.5rem;
-  color: #333;
-  margin-bottom: 1em;
-}
-
-.highlight p {
-  font-size: 1rem;
-  color: #666;
-}
-
-
-/* ProjectAnimation */
-@keyframes mymove {
-  70% {
-    transform: scale(0.9);
-    opacity: 0.9;
-  }
-}
-
-section img:hover {
-  animation: mymove 3.1s;
-  box-shadow: 0 10px 8px rgb(12, 12, 12);
-}
-
-
-/* sectionImage Styling */
-
-
-/* Form Styling */
-.form--- {
-  background-color: #000;
-  padding: 20px;
-}
-
-.form--- .container--two {
-  max-width: 768px;
-  width: 60%;
-  margin: 0 auto;
-  margin-top: 3em;
-  margin-bottom: 3em;
-  padding: 2em;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 3px 3px 3px rgb(200, 201, 197);
-}
-
-
-.input__form2{
-  list-style-type: none;
-}
-form input {
-  background-color: #cac5c5;
-  width: 100%; /* Adjusted to take full width of the form */
-  padding: 10px;
-  border-radius: 1em;
-  border: none;
-  margin: 1em 0; /* Adjusted margin for better spacing */
-  color: black;
-}
-
-.submit--btn {
-  background-color: orange;
-  color: white;
-  border-radius: 5px;
-  border: none;
-  padding: 10px;
-  width: 100%; /* Adjusted to make it full width */
-  max-width: 200px; /* Limit button size for larger screens */
-  display: block;
-  margin: 2em auto ; /* Centered button */
-}
-
-.submit--btn:hover {
-  cursor: pointer;
-  background-color: #14213d;
-  transition: 0.3s ease; /* Reduced transition time for snappier effect */
-  outline: none;
-  box-shadow: 0 0 5px #38CFD9;
-}
-
-
-
-/* * Footer Styles * */
-footer {
-  background-color: #f4f4f4;
-  text-align: center;
-  padding: 3px;
-
-}
-
-footer nav ul {
-  list-style: none;
-  display: block;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-footer nav ul li {
-  margin: 0.5rem 1.5rem;
-
-}
-
-footer a {
-  text-decoration: none;
-  font-size: 10px;
-}
-
-
-footer nav ul li a:hover {
-  background-color: gray;
-  transition: 0.3s;
-  border-radius: 5px;
-  padding: 5px;
-}
-
-footer nav ul li a {
-  color: black;
-  justify-content: center;
-}
-
-footer nav {
-  position: relative;
-  width: 100%;
-  bottom: 0;
-  padding: 10px 0;
-  z-index: 1000;
-
-}
-
-
-
-/* Media Querry */
-
-@media (max-width:760px) {
-  .highlights{
-    display: block;
-    width: 90%;
-   
   }
 
-.highlights > * {
-  margin-bottom: 20px;
-}
-
-.highlights > * :last-child{
-  margin-bottom: 0;
-}
-
-}
-
-
-/* Optional: Adjust input styles for smaller screens */
-@media (max-width: 600px) {
-  
-  .submit--btn{
-    width: 40%;
-   position:relative;
-   background-color: rebeccapurple;
-  
-
-  }
- .btn--two{
-  margin: auto ;
-  
-}
-
-  .form input {
-    width: 60%;
+  img {
+    max-width: 100%;
   }
 
-  .container--two{
+  header img {
+    width: 10em;
+    height: 10em;
+    border-radius: 5em;
+    margin-bottom: 1em;
+    margin-top: 3em;
+    border: 4px solid #f0f0f0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  header nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: right;
+    padding: 0rem;
+    background-color: var(--secondary-color);
+  }
+
+
+
+  header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+
+  header nav ul li {
+    margin: 0 1em;
+  }
+
+  header nav a {
+    text-decoration: none;
+    font-size: 12px;
+    color: #333;
+  }
+
+
+  header nav a:hover {
+    background-color: var(--hover--color2);
+    transition: all 0.3s ease;
+    border-radius: 2px;
+    padding: 3px;
+    color: #ffff;
+  }
+
+  header nav a:active {
+    transform: scale(0.98);
+  }
+
+  /* Icon styling */
+  .fa-brands.fa-linkedin.fa-1xl {
+    color: blue;
+    margin: 7px;
+
+  }
+
+  .fa-brands.fa-youtube.fa-1xl {
+    color: red;
+    margin: 7px;
+  }
+
+  .fa-brands.fa-github.fa-1xl {
+    color: black;
+    margin: 7px;
+  }
+
+  .icons {
+    display: flex;
+
+
+  }
+
+
+
+  /* AboutMe */
+  .aboutMe {
+    width: 70%;
     margin: auto;
+    margin-bottom: 5em;
+    margin-top: 3em;
+    max-width: 765px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.1);
   }
 
-  .form__label_name{
+
+  /* Horrizontal Rule */
+  .rule {
+    width: 100%;
+    height: 1px;
+    margin-bottom: 3em;
+  }
+
+  /* Top Tittle button */
+  .title button {
+    background-color: var(--hover--color);
+    color: #fff;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+
+  .title button:hover {
+    background-color: var(--hoverbackground--color1);
+    transform: scale(1.05);
+    color: var(--hover--color);
+  }
+
+  .title button:active {
+    transform: scale(0.98);
+  }
+
+
+  p {
+    padding: 5px;
+  }
+
+
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  /* Title section */
+  .section-title {
+    font-size: 1rem;
+    margin-bottom: 1em;
+  }
+
+  .section-title {
+    font-size: 2.5em;
+    margin-bottom: 40px;
+    color: #faf6f6;
+  }
+
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    animation-delay: 60s;
+    animation: 3s ease-in-out 1s reverse infinite both running mymove;
+    color: var(--hover--color);
+    animation-duration: 4s;
+  }
+
+  span {
+    color: var(--primary-color);
+  }
+
+
+  /* Project Image Styling */
+  .Image img {
+    width: 20%;
+  }
+
+  .row .Image {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+
+  }
+
+  /* Text Styling */
+  .intro-text {
+    font-size: 1rem;
+    color: #fff;
+    margin-bottom: 2em;
+  }
+
+  .project-text,
+  .blog-text {
+    font-size: 2rem;
+    margin-top: 4em;
+    text-align: center;
+    color: var(--primary-color);
+    margin-bottom: 1em;
+  }
+
+  .contact__form__text {
+    text-align: center;
+  }
+
+  /* SkillSection Styling */
+  .skill-statement {
+    padding: 2em;
+    margin-bottom: 1em;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .skill-statement .skills-text {
+    font-size: 2rem;
+    color: #fff;
+    margin-bottom: 1em;
+  }
+
+  .skill-statement p {
+    font-size: 1.1rem;
+    color: #f6f6f6;
+  }
+
+  .skill-section {
+    background-color: var(--hoverbackground--color1);
+    padding: 4em 2em;
+  }
+
+
+  /* The highlights */
+
+  .highlights {
+    display: flex;
+    justify-content: space-around;
+    gap: 2rem;
+  }
+
+  .highlight {
+    background-color: var(--background-color);
+    padding: 2em;
+    flex: 1;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .highlight h3 {
+    font-size: 1.5rem;
+    color: #333;
+    margin-bottom: 1em;
+  }
+
+  .highlight p {
+    font-size: 1rem;
+    color: #666;
+  }
+
+
+  /* ProjectAnimation */
+
+  img {
+    border-radius: 1em;
+  }
+
+
+
+
+
+
+  /* Form Styling */
+  .form--- {
+    background-color: var(--hoverbackground--color1);
+    padding: 20px;
+  }
+
+  .form--- .container--two {
+    max-width: 768px;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 3em;
+    margin-bottom: 3em;
+    padding: 2em;
+    background-color: var(--background-color);
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px rgb(200, 201, 197);
+  }
+
+
+  .input__form2 {
+    list-style-type: none;
+  }
+
+  form input {
+    background-color: #cac5c5;
+    width: 90%;
+    padding: 10px;
+    border-radius: 1em;
+    border: none;
+    margin: 1em 0;
+    color: var(--primary-color);
+  }
+
+  .submit--btn {
+    background-color: var(--hover--color);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    width: 100%;
+    max-width: 200px;
     display: block;
+    margin: 2em auto;
   }
-}
+
+  .submit--btn:hover {
+    cursor: pointer;
+    background-color: var(--hoverbackground--color1);
+    transition: 0.3s ease;
+    outline: none;
+    box-shadow: 0 0 5px var(--secondary-color);
+  }
 
 
+
+  /* * Footer Styles * */
+  footer {
+    background-color: var(--background-color);
+    text-align: center;
+    padding: 3px;
+
+  }
+
+  footer nav ul {
+    list-style: none;
+    display: block;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  footer nav ul li {
+    margin: 0.5rem 1.5rem;
+
+  }
+
+  footer a {
+    text-decoration: none;
+    font-size: 12px;
+  }
+
+
+  footer nav ul li a:hover {
+    background-color: var(--hover--color2);
+    transition: 0.3s;
+    border-radius: 5px;
+    padding: 5px;
+  }
+
+  footer nav ul li a {
+    color: black;
+    justify-content: center;
+  }
+
+  footer nav {
+    position: relative;
+    width: 100%;
+    bottom: 0;
+    padding: 10px 0;
+    z-index: 1000;
+
+  }
+
+
+
+  /* Media Querry */
+
+  @media (max-width:760px) {
+    .highlights {
+      display: block;
+      width: 90%;
+
+    }
+
+    .highlights>* {
+      margin-bottom: 20px;
+    }
+
+    .highlights>* :last-child {
+      margin-bottom: 0;
+    }
+
+  }
+
+
+  /* Media Query */
+  @media (max-width: 600px) {
+    .submit--btn {
+      width: 60%;
+      /* Adjust width as needed */
+      margin: 2em auto;
+      /* This centers the button horizontally */
+      background-color: rebeccapurple;
+      /* Optional: Change background color */
+      display: block;
+      /* Ensures the button is treated as a block-level element */
+      text-align: center;
+      /* Centers text inside the button */
+    }
+
+    .form input {
+      width: 70%;
+
+
+    }
+
+    .form__label_name {
+      display: block;
+    }
+  }
