--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -187,9 +187,10 @@ body {
   /* Top Tittle button */
   .title button {
     background-color: var(--hover--color);
-    color: #fff;
+    color:var(--secondary-color);
     padding: 10px 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    margin: 10px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
@@ -212,38 +213,6 @@ body {
     color: var(--secondary-color);
   }
 
-  .resume {
-    display: flex;
-    justify-content: center;
-    width: 9%;
-    border-radius: 8px;
-    padding: 9px;
-    margin: auto;
-
-    transition: all 0.3s ease;
-
-    background-color: var(--hoverbackground--color1);
-  }
-
-  .resume a {
-    text-decoration: none;
-    text-align: center;
-    color: var(--secondary-color);
-
-  }
-
-  .resume:hover {
-    background-color: var(--hover--color);
-    color: var(--secondary-color);
-    text-decoration: none;
-    transform: scale(7.5s);
-
-
-  }
-
-  .resume :active {
-    transform: scale(0.98);
-  }
 
   p {
     padding: 5px;
@@ -337,6 +306,7 @@ body {
     background-color: var(--background-color);
     padding: 2em;
     flex: 1;
+    margin-bottom: 3em;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
@@ -368,8 +338,8 @@ body {
     max-width: 768px;
     width: 50%;
     margin: 0 auto;
-    margin-top: 3em;
-    margin-bottom: 3em;
+    margin-top: 4em;
+    margin-bottom: 4em;
     padding: 2em;
     background-color: var(--background-color);
     border-radius: 5px;
@@ -634,30 +604,7 @@ body {
       display: none;
     }
 
-    .resume {
-      width: 30%;
-      height: 30%;
-      margin: 0 auto;
-
-    }
-
-    .general-button {
-      display: flex;
-      justify-content: space-evenly;
-      margin: auto;
-      width: 100%;
-     
-
-    }
-
-    .title {
-      margin: auto;
-    }
-.resume{
-  width: 40%;
-  margin-right: 20px;
-}
-
+    
   }
 
 
